# sudoku

./: .gitignore  CMakeLists.txt  README.md  sudoku.cpp  sudoku_old.cpp
